force-app/main/default/objects/URLs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>A generic hierarchy custom setting to house URLs for any need.</description>
    <fields>
        <fullName>Academic_Progress_Snapshot__c</fullName>
        <label>Academic Progress Snapshot</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Graduation_Portal_Stripe__c</fullName>
        <label>Graduation Portal - Stripe</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Login_Anyone_SSO_ACS_URL__c</fullName>
        <description>ACS URL used for Alumni portal library access</description>
        <inlineHelpText>ACS URL used for Alumni portal library access</inlineHelpText>
        <label>Login Anyone SSO ACS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Monash_Forms__c</fullName>
        <label>Monash Forms</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>My_App_SSO_Relative_URL__c</fullName>
        <defaultValue>&quot;/askmonash/s/loginredirect&quot;</defaultValue>
        <description>Store the relative url to direct users to OKTA Sign in from my.app</description>
        <label>My App SSO Relative URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Study_Statement__c</fullName>
        <label>View Study Statement</label>
        <type>Url</type>
    </fields>
    <label>URLs</label>
</CustomObject>